# pythondaq

./: CSV.py  ElectronicLoadMeasurements.py  Quick 'n dirty meting.py  arduino_device.py  controller bouwen.py  diode_experiment.py  measurments.csv  meet.csv  metingen.csv  opdracht.py  particle.py  pyproject.toml  start script.py  view.py
src/pythondaq/: arduino_device.py  cli.py  diode_experiment.py  new.py  view.py
tests/: test_imports.py
