[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["Gihaad3 <gihaadahmed2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
pyvisa = "^1.13.0"
matplotlib = "^3.8.1"
numpy = "^1.26.2"
statistics = "^1.0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
name = "pythondaq.view:view"